--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MenuActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,7 +17,9 @@
         </activity>
         <activity android:name=".RpsActivity" />
         <activity android:name=".ButtonMashActivity" />
-        <activity android:name=".PongActivity"></activity>
+        <activity android:name=".PongActivity" />
+        <activity android:name=".OnePlayer" />
+        <activity android:name=".TwoPlayer"></activity>
     </application>
 
 </manifest>
