Email login using firebase implemented

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,17 +8,20 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MenuActivity">
+        <activity android:name=".MenuActivity"/>
+        <activity android:name=".RpsActivity" />
+        <activity android:name=".ButtonMashActivity" />
+        <activity android:name=".PongActivity" />
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".OnePlayer" />
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RpsActivity" />
-        <activity android:name=".ButtonMashActivity" />
-        <activity android:name=".PongActivity" />
-        <activity android:name=".OnePlayer" />
+
         <activity android:name=".TwoPlayer"></activity>
     </application>
 
