--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
 
 }
 repositories {
-    mavenCentral()
+    maven { url 'https://maven.fabric.io/public' }
 }
 
 dependencies {
@@ -28,12 +28,10 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.firebaseui:firebase-ui:0.4.4'
+    compile 'com.firebaseui:firebase-ui-auth:1.2.0'
 
-    compile 'com.android.support:appcompat-v7:25.3.0'
-    compile 'com.android.volley:volley:1.0.0'
-    compile 'com.google.firebase:firebase-auth:10.0.1'
-    compile 'com.google.firebase:firebase-database:9.2.0'
-    testCompile 'junit:junit:4.12'
 }
 
 
