--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,10 +28,14 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+
+
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.firebaseui:firebase-ui:0.4.4'
-    compile 'com.firebaseui:firebase-ui-auth:1.2.0'
-
+    compile 'com.google.firebase:firebase-auth:10.2.1'
+    compile 'com.google.firebase:firebase-database:10.2.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
 
 
