--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MenuActivity"/>
+        <activity android:name=".MenuActivity" />
         <activity android:name=".RpsActivity" />
         <activity android:name=".ButtonMashActivity" />
         <activity android:name=".PongActivity" />
@@ -21,8 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".TwoPlayer"></activity>
+        <activity android:name=".TwoPlayer" />
+        <activity android:name=".NumberPlayers"></activity>
     </application>
 
 </manifest>
